whisply-rs/tui/src/chatwidget/snapshots/whisply_tui__chatwidget__tests__profile_permissions_selection_popup_with_custom_profiles.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Update Model Permissions

  1. Ask for approval        Whisply can read and edit files in the current
                             workspace, and run commands. Approval is required
                             to access the internet or edit other files.
  2. Auto                    A fresh limited review decides allow, ask, or
                             deny.
  3. Full access             Whisply can edit files outside this workspace and
                             access the internet without asking for approval.
                             Full access does not bypass subscriptions, Usage,
                             site, file, or app rules, macOS permissions, or
                             required final confirmation.
  4. Read Only               Whisply can read files in the current workspace.
                             Approval is required to edit files or access the
                             internet.
› 5. locked-down (current)   Inspect and patch only approved workspace files.
     web-enabled (disabled)  Workspace profile with network access. (disabled:
                             Disabled by requirements.)

  Press enter to confirm or esc to go back
