whisply-rs/tui/src/chatwidget/snapshots/whisply_tui__chatwidget__tests__signed_out_usage_command_reports_whisply_app_requirement.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
■ Whisply controls are unavailable. Keep the Whisply app running and try again.
