whisply-rs/tui/src/chatwidget/snapshots/whisply_tui__chatwidget__tests__status_line_setup_popup_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: status_line_popup_snapshot(&mut chat)
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search
  >
› [x] Use theme colors      Apply colors from the active /theme
  ───────────────────────
  [x] five-hour-usage       Five-hour Usage (omitted until Usage is available)
  [x] weekly-usage          Weekly Usage (omitted until Usage is available)
  [ ] model                 Current model name
  [ ] model-with-reasoning  Current model name with reasoning level
  [ ] reasoning             Current reasoning level
  [ ] current-dir           Current working directory

  Usage (five-hour) 47% used · Usage (weekly) 11% used
  Press space to toggle; ←/→ to move; enter to confirm and close; esc to close
