whisply-rs/tui/src/chatwidget/snapshots/whisply_tui__chatwidget__tests__status_surface_previews_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: snapshot
---
status line: Usage (five-hour) 47% used · Usage (weekly) 11% used
terminal title: Usage (five-hour) 47% used | Usage (weekly) 11% used
